# main-repo

./: .gitignore  CONTRIBUTIONS.md  README.md  requirements.todo.md  user-stories.md  video script.md
backend/: README.md  ROUTES.md  pyproject.toml
backend/backend/: ROUTES_BASIC.md  settings.py  urls.py
backend/core/: admin.py  middleware.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/core/management/commands/: runserver.py  update_geolite2.py
backend/events/: admin.py  apps.py  models.py  promoter_urls.py  promoter_views.py  serializers.py  urls.py  views.py  views.py.bak
backend/events/migrations/: 0001_initial.py  0002_initial.py
backend/participants/: admin.py  models.py  serializers.py  urls.py  views.py
backend/participants/migrations/: 0001_initial.py
backend/references/: backend-map.md  backend-plan.md  permissions_audit.md  requirements.md  unique-identifier.md
backend/scripts/: README.md  schedule_geolite2_updates.py  update_geolite2.py
backend/sharing/: admin.py  models.py  tests.py  urls.py  views.py
backend/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/users/management/commands/: create_promoter_profile.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_name_user_first_name_user_last_name.py
frontend/: .env.local.bak  README.md  app.json  global.css  package.json  tailwind.config.js  tsconfig.json
frontend/app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx  welcome.tsx
frontend/components/: ThemeToggle.tsx  parallax-scroll-view.tsx
(+85 files in other folders)
